--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "fake-api": "json-server --watch src/API/db.json --port 5000"
   },
   "dependencies": {
+    "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
